--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
     <div class="u-clearfix u-valign-middle">
       <h2 class="u-text u-text-default u-text-1">Learn Russian Alphabet</h2>
       <div class="u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
+    </div>
   </section>
 
   <section class="u-align-center u-clearfix u-image u-section-2" id="sec-f044">
